<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/dark_green">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:backgroundTint="@color/beige"
                android:ems="10"
                android:hint="@string/surname_edit_text"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"
                android:autofillHints="name"/>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/beige"
                android:ems="10"
                android:hint="@string/name_edit_text"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"
                android:autofillHints="name"/>

            <EditText
                android:id="@+id/patronymicEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/beige"
                android:ems="10"
                android:hint="@string/patronymic_edit_text"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"
                android:autofillHints="name"/>

            <EditText
                android:id="@+id/mailEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/beige"
                android:ems="10"
                android:hint="@string/mail_edit_text"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"
                android:autofillHints="emailAddress"/>

            <EditText
                android:id="@+id/heightEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/beige"
                android:ems="10"
                android:hint="@string/height_edit_text"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"
                android:autofillHints=""/>

            <EditText
                android:id="@+id/weightEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/beige"
                android:ems="10"
                android:hint="@string/weight_edit_text"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"
                android:autofillHints=""/>

            <EditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/beige"
                android:ems="10"
                android:hint="@string/age_edit_text"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp"
                android:autofillHints=""/>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/sage"
        android:text="@string/button_register_name"
        android:textColor="@color/beige"
        android:textSize="28sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>